Fix #33761: Infinite loop in space_image if tile size > image size